--- a/Entrega 2/estilo.css
+++ b/Entrega 2/estilo.css
@@ -9,11 +9,20 @@
     margin: 25px 25px 25px 25px;
 }
 
-h2{
+h1, h2, h3, h4, h5, p, a, footer{
     text-align: center;
     margin-bottom: 20px;
 }
 
 .reg{
     margin: 10px 0px 10px 0px;
+}
+
+button{
+    width: 200px;
+    margin-top: 20px;
+}
+
+.contenedor{
+    margin: 50px 50px 50px 50px;
 }
