--- a/Entrega 2/CSS/estilo_mantenedor.css
+++ b/Entrega 2/CSS/estilo_mantenedor.css
@@ -24,3 +24,83 @@
     margin-right: 25%;
     padding: 8%;
 }
+
+.fondopersonal{
+    background-image: url('personal.png');
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 2%;
+    min-height: 877px;
+}
+
+.atras{
+    width: 100%;;
+}
+
+.opc_cargo{
+    width: 100%;
+    height: 33px;
+    font-size: 20px;
+}
+
+.texto_registro{
+    font-size: x-large;
+    font-weight: 700;
+}
+
+.formulario_personal{
+    background-color: rgba(255, 255, 255, 0.74);
+    padding: 10%;
+}
+
+.listado_personal{
+    background-color: rgba(255, 255, 255, 0.74);
+    padding: 10%;
+}
+
+.texto_listado th{
+    font-size: large;
+    font-weight: 700;
+}
+
+.texto_listado td{
+    font-size: larger;
+    font-weight: bold;
+    color: rgb(25, 0, 253)
+}
+
+.edicion_personal{
+    background-color: rgba(255, 255, 255, 0.74);
+    padding: 6%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.fondoedificio{
+    background-image: url('edificios.jpg');
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 2%;
+    min-height: 877px;
+}
+
+.formulario_edificio{
+    background-color: rgba(255, 255, 255, 0.74);
+    padding: 10%;
+}
+
+.listado_edificio{
+    background-color: rgba(255, 255, 255, 0.74);
+    padding: 10%;
+}
+
+.edicion_edificio{
+    background-color: rgba(255, 255, 255, 0.74);
+    padding: 6%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
