--- a/Entrega 2/CSS/estilo.css
+++ b/Entrega 2/CSS/estilo.css
@@ -3,13 +3,14 @@
     height: 100%;
     border: 1px solid;
     margin-top: 50px;
+    background-color: white;
 }
 
 .margen{
     margin: 25px 25px 25px 25px;
 }
 
-h1, h2, h3, h4, h5, p, a, footer{
+h1, h2, h3, h4, h5, p{
     text-align: center;
     margin-bottom: 20px;
 }
@@ -19,10 +20,64 @@ h1, h2, h3, h4, h5, p, a, footer{
 }
 
 ._a{
-    width: 200px;
+    width: 280px;
     margin-top: 20px;
+    background-color: rgba(255, 255, 255, 0.658);
+    color: black;
+    border-style: solid;
+    border-width: thick;
+    border-color: black;
+    font-weight: 600;
+    
+    font-size: x-large;
 }
 
 .contenedor{
-    margin: 50px 50px 50px 50px;
+    padding: 10%;
+}
+
+.fondoacceso{
+    background-image: url('accesoadm.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 4%;
+    min-height: 877px;
+}
+
+.fondoportal{
+    background-image: url('edificios.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 877px;
+}
+
+.capacontainer{
+    background-color: rgba(255, 255, 255, 0.521);
+}
+
+.titulo{
+    font-weight: bold;
+    font-size: 350%;
+}
+
+.subtitulo{
+    font-size: 200%;
+}
+
+footer{
+    text-align: center;
+    padding-bottom: 107px;
+}
+
+.textofooter{
+    font-size: 160%;
+    font-weight: 700;
+}
+
+.linkfooter{
+    text-decoration: underline;
+    font-size: 130%;
+    color: blue;
 }
