--- a/Entrega 2/CSS/estilo.css
+++ b/Entrega 2/CSS/estilo.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, p{
 }
 
 .contenedor{
-    padding: 10%;
+    padding: 8%;
 }
 
 .fondoacceso{
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, p{
 
 footer{
     text-align: center;
-    padding-bottom: 107px;
+    padding-bottom: 102px;
 }
 
 .textofooter{
@@ -94,4 +94,11 @@ footer{
 
 .navbarlinks{
     color: black;
+}
+
+.logotitulo{
+    position: relative;
+    left: 33%;
+    width: 30%;
+    height: 80px;
 }
