--- a/Entrega 2/CSS/estilo.css
+++ b/Entrega 2/CSS/estilo.css
@@ -10,7 +10,7 @@
     margin: 25px 25px 25px 25px;
 }
 
-h1, h2, h3, h4, h5, p{
+h1, h2, h5, p{
     text-align: center;
     margin-bottom: 20px;
 }
@@ -28,7 +28,6 @@ h1, h2, h3, h4, h5, p{
     border-width: thick;
     border-color: black;
     font-weight: 600;
-    
     font-size: x-large;
 }
 
@@ -101,4 +100,89 @@ footer{
     left: 33%;
     width: 30%;
     height: 80px;
+}
+
+.contenedor_portal{
+    padding: 8%;
+    padding-bottom: 5%;
+}
+
+h4{
+    text-align: center;
+    font-size: 300%;
+}
+
+h3{
+    padding-top: 1%;
+    font-size: 25px;
+    padding-left: 10%;
+}
+
+.containerinfoenvivo{
+    background-color: rgba(255, 255, 255, 0.521);
+    border-style: solid;
+    padding-top: 1%;
+    padding-bottom: 1.5%;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+}
+
+.colum1{
+    display: flex;
+}
+
+.colum2{
+    display: inline-flex;
+}
+
+.textofooterenvivo{
+    font-size: 120%;
+    font-weight: 700;
+}
+
+.linkfooterenvivo{
+    text-decoration: underline;
+    font-size: 110%;
+    color: blue;
+}
+
+.copyenvivo{
+    position: relative;
+    top: 5px;
+}
+
+.footerenvivo{
+    text-align: center;
+    margin-top: 3.5%;
+    padding-bottom: 53px;
+}
+
+.fondodatosanteriores{
+    background-image: url('fondo.jpg');
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 877px;
+    padding-top: 8%;
+}
+
+.contenedor_datosanteriores{
+    background-color: rgba(255, 255, 255, 0.521);
+    border-style: solid;
+    padding-top: 1%;
+    padding-bottom: 1.5%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.boton button{
+    color: rgb(255, 255, 255);
+    background-color: rgb(26, 25, 25);
+}
+
+.logodatosant{
+    position: relative;
+    left: 43%;
+    width: 12%;
 }
