--- a/Entrega 2/CSS/estilo.css
+++ b/Entrega 2/CSS/estilo.css
@@ -103,7 +103,7 @@ footer{
 }
 
 .contenedor_envivo{
-    padding: 5%;
+    padding: 3%;
 }
 
 .contenedor_datosenvivo{
@@ -154,7 +154,7 @@ h3{
 .footerenvivo{
     text-align: center;
     margin-top: 3.5%;
-    padding-bottom: 58px;
+    padding-bottom: 69px;
 }
 
 .cantidad_envivo{
@@ -206,7 +206,39 @@ h3{
 }
 
 .buscar{
-    min-width: 47%;
+    width: 50%;
     background-color: black;
     color: white;
+}
+
+.edificios_datosant{
+    width: 50%;
+}
+
+#dia{
+    display: none;
+    width: 50%;
+    margin-bottom: 5%;
+}
+
+#semana{
+    display: none;
+    width: 50%;
+    margin-bottom: 5%;
+}
+
+#mes{
+    display: none;
+    width: 50%;
+    margin-bottom: 5%;
+}
+
+.botongrafico{
+    color: rgb(255, 255, 255);
+    background-color: rgb(26, 25, 25);
+    margin-left: 2%;
+}
+
+#graph{
+    display: none;
 }
