--- a/Entrega 3/CSS/estilo.css
+++ b/Entrega 3/CSS/estilo.css
@@ -1,14 +1,11 @@
 .contenedor-login{
-    width: 300px;
-    height: 100%;
-    border: 1px solid;
-    margin-top: 50px;
+    width: 400px;
+    height: 420px;
+    border: solid;
+    padding-top: 5%;
     background-color: white;
 }
 
-.margen{
-    margin: 25px 25px 25px 25px;
-}
 
 h1, h2, p{
     text-align: center;
@@ -35,24 +32,72 @@ h1, h2, p{
     padding: 8%;
 }
 
+.acceso_info_titulo{
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: 230%;
+}
+
+.acceso_info{
+    text-align: center;
+}
+
+.acceso_contenedor_info{
+    background-color: rgba(255, 255, 255, 0.774);
+    border: solid;
+    width: 500px;
+    height: 500px;
+    text-align: start;
+    padding-top: 7%;
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-left: 8%;
+}
+
 .fondoacceso{
     background-image: url('accesoadm.jpg');
     background-position: center;
+    background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 4%;
+    padding-top: 5%;
     min-height: 877px;
+}
+
+.acceso_margen{
+    margin-left: 15%;
+}
+
+.acceso_input{
+    width: 70%;
+}
+
+.acceso_titulo{
+    text-decoration: underline;
+    text-align: center;
+}
+
+.acceso_subtitulo{
+    font-weight: normal;
+    font-size: 150%;
+    margin-top: -3%;
+    margin-bottom: 10%;
 }
 
 .fondoportal{
     background-image: url('edificios.jpg');
     background-position: center;
+    background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 877px;
 }
 
 .capacontainer{
+    background-color: rgba(255, 255, 255, 0.521);
+}
+
+.datosanteriores_capacontainer{
     background-color: rgba(255, 255, 255, 0.521);
 }
 
@@ -67,17 +112,18 @@ h1, h2, p{
 
 footer{
     text-align: center;
-    padding-bottom: 114px;
+    padding-bottom: 118px;
 }
 
 .textofooter{
-    font-size: 160%;
+    font-size: 120%;
     font-weight: 700;
+    margin-bottom: 1.5%;
 }
 
 .linkfooter{
     text-decoration: underline;
-    font-size: 130%;
+    font-size: 110%;
     color: blue;
 }
 
@@ -163,12 +209,13 @@ h3{
 }
 
 .fondodatosanteriores{
-    background-image: url('fondo.jpg');
+    background-image: url('edificios.jpg');
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 877px;
+    margin: 0%;
 }
 
 .contenedor_datosanteriores{
@@ -178,6 +225,12 @@ h3{
     padding-bottom: 1.5%;
     margin-left: 10%;
     margin-right: 10%;
+}
+
+.datosanteriores_capacontainer{
+    background-color: rgba(255, 255, 255, 0.521);
+    margin-left: -12px;
+    margin-right: -12px;
 }
 
 .boton button{
@@ -214,6 +267,19 @@ h3{
 
 .edificios_datosant{
     width: 51%;
+    border-style: solid;
+}
+
+.linkfooter_datosant{
+    text-decoration: underline;
+    font-size: 110%;
+    color: blue;
+}
+
+.footer_datosant{
+    text-align: center;
+    margin-top: 4.5%;
+    padding-bottom: 128px;
 }
 
 #dia{
@@ -265,4 +331,15 @@ h3{
 .pdf{
     color: white;
     text-decoration: none;
+}
+
+.footer_faq{
+    text-align: center;
+    margin-top: 27%;
+    padding-bottom: 69px;
+}
+
+.acceso_run_info{
+    font-weight: normal;
+    font-size: 85%;
 }
